@@ -11,6 +11,8 @@ Broker:
 Client library:
 - Fix possible memory leak in C/C++ library when communicating with
   a broker that doesn't follow the spec.
+- Block in Python loop_stop() until all messages are sent, as the
+  documentation states should happen.
 
 Clients:
 - mosquitto_sub now uses fwrite() instead of printf() to output messages, so
